Fixed product content overflowing

--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -19,12 +19,6 @@ html, body {
 
 
 @media (max-width: 968px) {
-    .main {
-        display: inline;
-        justify-content: center; 
-        align-items: center;
-    }
-
     /* Image form */
     
     .image-block-wrapper {
@@ -88,30 +82,6 @@ html, body {
     .password-visibility-btn {
         top: 39%;
         left: 88%;
-    }
-
-
-    /* Profile form */
-
-    .profile-block-wrapper {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        text-align: center;
-    }
-
-    .profile-block-title {
-        margin-top: 160px;
-    }
-    
-    .profile-block-subtitle {
-        margin-bottom: -50px;
-    }
-
-    /* Email resend modal window */
-
-    .close {
-        margin: 0;
     }
 
     /* Log-out modal window */
