--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -465,77 +465,8 @@
     flex-wrap: wrap;
     justify-content: start;
     width: 95%; 
-    gap: 15px;
-}
-
-.temp-product-card {
-    display: flex;
-    flex-direction: column;
-    width: 154px;
-    height: 184px;
-    padding: 7px;
-    border-radius: 15px;
-    background-color: #fff;
-    box-shadow: 0px 3px 7px -5px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 0px 3px 7px -5px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 3px 7px -5px rgba(0,0,0,0.75);
-    cursor: pointer;
-    transition: scale 0.3s ease, background-color 0.3s ease;
-}
-
-.temp-product-card:hover {
-    scale: 1.05;
-    background-color: #e4eaea;
-}
-
-.product-card-image {
-    display: flex;
-    box-sizing: border-box;
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 12px;
-    margin: 0 auto;
-    box-shadow: 0px 3px 7px -5px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 0px 3px 7px -5px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 3px 7px -5px rgba(0,0,0,0.75);
-}
-
-.product-card-name {
-    font-size: 14px;
-    margin-top: 5px;
-    font-weight: 500;
-}
-
-.product-card-price {
-    font-size: 14px;
+    gap: 20px;
     margin-top: 20px;
-    color: #5D5FEF;
-    font-weight: 500;
-}
-
-.product-card-like-wrapper {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    margin-left: -2px;
-}
-
-.product-card-like-button {
-    display: flex;
-    width: 24px;
-    background: none;
-    border: none;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.product-card-like-icon {
-    width: 24px;
-}
-
-.product-card-likes {
-    font-size: 12px;
-    margin-left: 5px;
 }
 
 
