--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -194,9 +194,9 @@ content {
     flex-wrap: wrap;
     justify-content: start;
     margin-top: 50px;
-    width: 80%; 
-    gap: 15px; 
-  }
+    width: 50vw;
+    gap: 20px; 
+}
   
   
 
